--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,18 +19,20 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-            <div class="post-preview">
-                <a href="post.html">
-                    <h2 class="post-title">
-                        Man must explore, and this is exploration at its greatest
-                    </h2>
-                    <h3 class="post-subtitle">
-                        Problems look mighty small from 150 miles up
-                    </h3>
-                </a>
-                <p class="post-meta">Posted by <a href="#">Start Bootstrap</a> on September 24, 2014</p>
-            </div>
-            <hr>
+            <% @posts.each do |post| %>
+              <div class="post-preview">
+                  <%= link_to post_path(post)%>
+                      <h2 class="post-title">
+                          <%= post.title%>
+                      </h2>
+                      <h3 class="post-subtitle">
+                          <%= truncate(post.body, length: 100)%>
+                      </h3>
+                  </a>
+                  <p class="post-meta">Posted by <a href="#">Start Bootstrap</a> on September 24, 2014</p>
+              </div>
+              <hr>
+            <% end %>
             <div class="post-preview">
                 <a href="post.html">
                     <h2 class="post-title">
