--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,13 +21,14 @@
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
             <% @posts.each do |post| %>
               <div class="post-preview">
-                  <%= link_to post_path(post)%>
+                  <%= link_to post_path(post) do %>
                       <h2 class="post-title">
                           <%= post.title%>
                       </h2>
                       <h3 class="post-subtitle">
                           <%= truncate(post.body, length: 100)%>
                       </h3>
+                  <% end %>
                   </a>
                   <p class="post-meta">Posted by <a href="#">Start Bootstrap</a> on September 24, 2014</p>
               </div>
