--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,38 +1,21 @@
-
-<!-- Page Header -->
-<!-- Set your background image for this header on the line below. -->
-<header class="intro-header" style="background-image: url('assets/home-bg.jpg')">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <div class="site-heading">
-                    <h1>Clean Blog</h1>
-                    <hr class="small">
-                    <span class="subheading">A Clean Blog Theme by Start Bootstrap</span>
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
-
-<!-- Main Content -->
+<%= render 'shared/header'%>
+<%= render 'shared/alerts'%>
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-            <% @posts.each do |post| %>
-              <div class="post-preview">
-                  <%= link_to post_path(post) do %>
-                      <h2 class="post-title">
-                          <%= post.title%>
-                      </h2>
-                      <h3 class="post-subtitle">
-                          <%= truncate(post.body, length: 100)%>
-                      </h3>
-                  <% end %>
-                  </a>
-                  <p class="post-meta">Posted by <a href="#">Start Bootstrap</a> on September 24, 2014</p>
-              </div>
-              <hr>
+            <% @posts.each do |post|%>
+                <div class="post-preview">
+                    <a href="post.html">
+                        <h2 class="post-title">
+                            <%= post.title %>
+                        </h2>
+                        <h3 class="post-subtitle">
+                            <%= truncate(post.body, length: 100) %>
+                        </h3>
+                    </a>
+                    <p class="post-meta">Posted by <a href="#">Start Bootstrap</a> on <%= post.created_at.strftime("%B %-d, %Y")%></p>
+                </div>
+                <hr>
             <% end %>
             <div class="post-preview">
                 <a href="post.html">
